2005-06-19  Adam Jocksch  <ajocksch@redhat.com>

	* NoDebugInfoException.java: Added.

2005-06-14  Adam Jocksch  <ajocksch@redhat.com>

	* cni/Dwfl.cxx (dwfl_begin): Now uses JvAllocBytes to allocate the
	memory for the callbacks struct, so it can be kept in a RawDataManaged.

2005-06-06  Adam Jocksch  <ajocksch@redhat.com>

	* tests/TestDwfl.java (testGetLine): Now checks for correctness of
	filename, line number, and column, also removed failing assertion from
	end that was used for debugging purposes.
	
	* tests/TestDwfl.java: Added Frysk license.
	* tests/TestLib.java: Ditto.
	* tests/cni/TestLib.cxx: Ditto.

	* tests: Added.
	* tests/TestDwfl.java: Added.
	* tests/TestLib.java: Added.
	* tests/cni: Added.
	* tests/cni/TestLib.cxx: Added.

2005-06-05  Adam Jocksch  <ajocksch@redhat.com>

	* Dwfl.java (getCallbacks): Added, shouldn't be called just satisfying
	ecj.
	* Dwfl.cxx (dwfl_begin): Now properly allocates callback object.

2005-05-31  Adam Jocksch  <ajocksch@redhat.com>

	* DwflLine.java (DwflLine): Now takes a pointer to the parent Dwfl.
	(getParent): Added.
	* DwflModule.java (DwflModule): Now takes a pointer to the parent Dwfl.
	(getParent): Added.

2005-05-30  Adam Jocksch  <ajocksch@redhat.com>

	* cni/Dwfl.cxx (dwfl_begin): Fixed errors.

	* Dwfl.java (Dwfl): Now takes a pid.
	* cni/Dwfl.cxx (dwfl_begin): Now takes a pid, and calls
	dwfl_linux_proc_report for that process.

2005-05-24  Adam Jocksch  <ajocksch@redhat.com>

	* Dwarf.java: Created.
	* DwarfCommand.java: Ditto.
	* DwarfDie.java: Ditto.
	* Dwfl.java: Ditto.
	* DwflLine.java: Ditto.
	* DwflModule.java: Ditto.
	* cni: Added.
	* cni/Dwarf.cxx: Created.
	* cni/Dwfl.cxx: Ditto.
	* cni/DwflLine.cxx: Ditto.
	